--- a/public/Apps/YoutubeDownloader/YoutubeDownloader/YoutubeDownloader.csproj
+++ b/public/Apps/YoutubeDownloader/YoutubeDownloader/YoutubeDownloader.csproj
@@ -120,6 +120,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\PageModel.cs" />
+    <Compile Include="ViewModels\PageModelBase.cs" />
+    <Compile Include="ViewModels\PageModelSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
