--- a/public/Apps/YoutubeDownloader/YoutubeDownloader/YoutubeDownloader.csproj
+++ b/public/Apps/YoutubeDownloader/YoutubeDownloader/YoutubeDownloader.csproj
@@ -83,7 +83,6 @@
     <None Include="Libraries\YoutubeExtractor\obj\Debug\Full\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="Libraries\YoutubeExtractor\packages.YoutubeExtractor.config" />
     <None Include="Libraries\YoutubeExtractor\packages.YoutubeExtractor_Portable.config" />
-    <None Include="Libraries\YoutubeExtractor\YoutubeExtractor.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +93,9 @@
     <Compile Include="Common\Command.cs" />
     <Compile Include="Common\Extensions.cs" />
     <Compile Include="Common\ViewModel.cs" />
+    <Compile Include="DownloadHistoryPage.xaml.cs">
+      <DependentUpon>DownloadHistoryPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Libraries\YoutubeExtractor\AacAudioExtractor.cs" />
     <Compile Include="Libraries\YoutubeExtractor\AdaptiveType.cs" />
     <Compile Include="Libraries\YoutubeExtractor\AudioDownloader.cs" />
@@ -120,9 +122,13 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AudioPivotItemViewModel.cs" />
+    <Compile Include="ViewModels\DownloadHistoryPageModel.cs" />
+    <Compile Include="ViewModels\MediaItemViewModel.cs" />
     <Compile Include="ViewModels\PageModel.cs" />
     <Compile Include="ViewModels\PageModelBase.cs" />
     <Compile Include="ViewModels\PageModelSettings.cs" />
+    <Compile Include="ViewModels\VideoPivotItemViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -138,14 +144,16 @@
     <Content Include="Assets\WideLogo.scale-240.png" />
     <Content Include="Html\css\phone.css" />
     <Content Include="Html\index.html" />
-    <Content Include="Libraries\YoutubeExtractor\YoutubeExtractor.csproj" />
-    <Content Include="Libraries\YoutubeExtractor\YoutubeExtractor_Portable.csproj" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="DownloadHistoryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
